syntax = "proto3";
package user_grpc;
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


service UserService {
  rpc Create(CreateReq) returns (UserWithToken);
  rpc GetByID(ID) returns (User);
  rpc Update(UpdateReq) returns (User);
  rpc Delete(ID) returns (google.protobuf.BoolValue);
  rpc Login(LoginReq) returns (UserWithToken);
  rpc Logout(LogoutReq) returns (google.protobuf.BoolValue);
  rpc RefreshIDToken(RefreshReq) returns (TokenPair);
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateReq {
  string name = 1 [(validate.rules).string = {min_len: 1, max_len: 10}];
  string email = 2 [(validate.rules).string.email = true];
  string password = 3 [(validate.rules).string.pattern = "^[A-Za-z0-9]{6,72}$"]; // 6文字以上72文字以下の英数字
}

message UpdateReq {
  int64 id = 1 [(validate.rules).int64.gte = 1];
  string name = 2 [(validate.rules).string = {min_len: 1, max_len: 10}];
  string email = 3 [(validate.rules).string.email = true];
  string password = 4 [(validate.rules).string.pattern = "^[A-Za-z0-9]{6,72}$"]; // 6文字以上72文字以下の英数字
}

message LoginReq {
  string email = 1 [(validate.rules).string.email = true];
  string password = 2 [(validate.rules).string.pattern = "^[A-Za-z0-9]{6,72}$"]; // 6文字以上72文字以下の英数字
}

message LogoutReq {
  string jti = 1 [(validate.rules).string.uuid = true];
}

message RefreshReq {
  int64 id = 1 [(validate.rules).int64.gte = 1];
  string jti = 2 [(validate.rules).string.uuid = true];
}

message ID {
  int64 id = 1 [(validate.rules).int64.gte = 1];
}

message UserWithToken {
  User user = 1;
  TokenPair token_pair = 2;
}

message TokenPair{
  string id_token = 1;
  string refresh_token = 2;
}
